--- a/TarkovPilot/TarkovPilot.csproj
+++ b/TarkovPilot/TarkovPilot.csproj
@@ -56,13 +56,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\AppSettings.cs" />
     <Compile Include="Classes\DataTypes.cs" />
     <Compile Include="Classes\Enums.cs" />
     <Compile Include="Classes\Env.cs" />
     <Compile Include="Classes\LimitedConcurrentQueue.cs" />
     <Compile Include="Classes\Logger.cs" />
+    <Compile Include="Classes\LogsWatcher.cs" />
     <Compile Include="Classes\Position.cs" />
+    <Compile Include="Classes\ScreenshotsWatcher.cs" />
     <Compile Include="Classes\Settings.cs" />
     <Compile Include="Classes\Updater.cs" />
     <Compile Include="Program.cs" />
